@@ -45,6 +45,7 @@ filtered_files = {'assert_true', ...
                   'assert_empty', ...
                   'assert_not_empty', ...
                   'assert_error', ...
+                  'assert_warning', ...
                   'assert_equals_withequalnans', ...
                   'assert_not_equals_withequalnans', ...
                   'fail'};
